# ChangeLog for dev-ruby/authlogic
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2

  13 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Version bump.

  08 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
  Initial import.
