@@ -1,6 +1,4 @@
-DIST authlogic-2.0.11.gem 67072 RMD160 8a2d7b8f9ac5a28f3b6a4d740c558445d0fa67a3 SHA1 6bbdaeb86f371199f3b6d1947cbd3e7ccbc5f52a SHA256 7463206a3820c8c2c70763624b2e9c8e823258d57ee42d60a077c87a7f5bd777
-DIST authlogic-2.0.12.gem 69120 RMD160 75d9a705ea331614bf36f4396da0c1e917fac6e9 SHA1 7dc279630432630d755bf7154ef5ed16a53ed779 SHA256 418f5ee9bce6942c4267872e9ffffd50a9b32f12ee24c2cf94d57e5877ed840e
-EBUILD authlogic-2.0.11.ebuild 477 RMD160 03d1fdf7770b60414b9134e99d4635234b6642dd SHA1 b20f6741f351b8c5e198015c38ec16749552514e SHA256 2b73cc5ed3cbde01f5b4a71bc698ca8f7c9ea05a473ba07285acfd84ecac34a0
-EBUILD authlogic-2.0.12.ebuild 496 RMD160 08413453793ea41d0f76f6d7eedd73cd58ad1c41 SHA1 0f5ab725544d20fc270ba24d416a3d51fb6bb4d3 SHA256 8d2dfec1df5360e599152b0e264f1f656f72f491f046687ab105ddaa63dccc41
-MISC ChangeLog 264 RMD160 78e3436f295083f24d14bc63ae7fc9660be33fc3 SHA1 effe7b01d659a2b8864a01681bafc4b06c17fe55 SHA256 e92cfee0793d6ec5e975c9f3f9a69dd84f28dec42164787d4640a175611b6ee4
+DIST authlogic-2.0.13.gem 69632 RMD160 684eb84b22656a153ae28a94b31ce97456713e07 SHA1 3c20060ae03ff3d961748e49443a7b6271ba0d0a SHA256 621bf03a6ba137483a2cdd33f3aa51f127a754848fc2245181a472f9a1d30ce4
+EBUILD authlogic-2.0.13.ebuild 496 RMD160 08413453793ea41d0f76f6d7eedd73cd58ad1c41 SHA1 0f5ab725544d20fc270ba24d416a3d51fb6bb4d3 SHA256 8d2dfec1df5360e599152b0e264f1f656f72f491f046687ab105ddaa63dccc41
+MISC ChangeLog 371 RMD160 aa977d6256610863ec3d3b183dbb42f378538461 SHA1 39792b39244357f989ca92ef079b9f52c52d602c SHA256 bf418da1f6319633aec132471f1150051b6323e5836afcea5c01a55716f924ee
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
