@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 
   13 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
+  Version bump: manifest error in gem fixed.
+
+  13 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
   Version bump.
 
   08 May 2009; Hans de Graaff <graaff@gentoo.org> ChangeLog:
